kubernetes/backend-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
	name: immosn

---
apiVersion: apps/v1
kind: Deployment
metadata:
	name: backend
	namespace: immosn
	labels:
		app: backend
spec:
	replicas: 1
	selector:
		matchLabels:
			app: backend
	template:
		metadata:
			labels:
				app: backend
		spec:
			containers:
				- name: backend
					image: immosn/backend:latest
					imagePullPolicy: IfNotPresent
					ports:
						- containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
	name: backend
	namespace: immosn
spec:
	selector:
		app: backend
	ports:
		- protocol: TCP
			port: 8080
			targetPort: 8080
	type: ClusterIP
-
