kubernetes/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
	name: frontend
	namespace: immosn
	labels:
		app: frontend
spec:
	replicas: 1
	selector:
		matchLabels:
			app: frontend
	template:
		metadata:
			labels:
				app: frontend
		spec:
			containers:
				- name: frontend
					image: immosn/frontend:latest
					imagePullPolicy: IfNotPresent
					ports:
						- containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
	name: frontend
	namespace: immosn
spec:
	selector:
		app: frontend
	ports:
		- protocol: TCP
			port: 80
			targetPort: 80
	type: ClusterIP
-
