kubernetes/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
	name: nginx
	namespace: immosn
	labels:
		app: nginx
spec:
	replicas: 1
	selector:
		matchLabels:
			app: nginx
	template:
		metadata:
			labels:
				app: nginx
		spec:
			containers:
				- name: nginx
					image: immosn/nginx:latest
					imagePullPolicy: IfNotPresent
					ports:
						- containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
	name: nginx
	namespace: immosn
spec:
	selector:
		app: nginx
	ports:
		- protocol: TCP
			port: 80
			targetPort: 80
	type: ClusterIP
-
