kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
	name: immosn-ingress
	namespace: immosn
	annotations:
		kubernetes.io/ingress.class: nginx
spec:
	rules:
		- http:
				paths:
					- path: /api
						pathType: Prefix
						backend:
							service:
								name: nginx
								port:
									number: 80
					- path: /
						pathType: Prefix
						backend:
							service:
								name: nginx
								port:
									number: 80
